--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'java'
+apply plugin: JavaAptPlugin.class
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    javapt 'com.google.auto.value:auto-value:1.1'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile 'org.easytesting:fest-assert-core:2.0M10'
 }
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
