--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,8 @@ apply plugin: JavaAptPlugin.class
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.findbugs:annotations:3.0.0'
+
     javapt 'com.google.auto.value:auto-value:1.1'
 
     testCompile 'junit:junit:4.12'
