--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     android:allowBackup="true"
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher"
+    android:name=".ChunksApplication"
     android:theme="@style/AppTheme">
 
-    <activity android:name="com.ataulm.basic.MyActivity" />
+    <activity android:name=".MyActivity" />
 
     <activity-alias
       android:name="activity.primary_launcher"
-      android:targetActivity="com.ataulm.basic.MyActivity">
+      android:targetActivity=".MyActivity">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
