--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.ataulm.basic"
-        minSdkVersion 16
-        targetSdkVersion 23
+        applicationId "com.ataulm.chunks"
+        minSdkVersion 19
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
