--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.ataulm.basic">
+  package="com.ataulm.chunks">
 
   <application
     android:allowBackup="true"
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher"
-    android:name=".ChunksApplication"
+    android:name="com.ataulm.chunks.ChunksApplication"
     android:theme="@style/AppTheme">
 
-    <activity android:name=".MyActivity" />
+    <activity android:name="com.ataulm.chunks.MyActivity" />
 
     <activity-alias
       android:name="activity.primary_launcher"
-      android:targetActivity=".MyActivity">
+      android:targetActivity="com.ataulm.chunks.MyActivity">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
