--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.novoda:view-pager-adapter:0.9.1'
+    compile 'com.novoda:landing-strip:1.0.1'
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
