--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.ataulm.chunks">
 
@@ -9,6 +10,7 @@
     android:theme="@style/AppTheme">
 
     <activity android:name=".ChunksActivity" />
+    <activity android:name=".settings.SettingsActivity" />
 
     <activity-alias
       android:name="activity.primary_launcher"
