--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,13 +3,20 @@
   package="com.ataulm.chunks">
 
   <application
-    android:allowBackup="true"
-    android:label="@string/app_name"
-    android:icon="@drawable/ic_launcher"
     android:name="com.ataulm.chunks.ChunksApplication"
+    android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
     android:theme="@style/AppTheme">
 
-    <activity android:name=".ChunksActivity" />
+    <activity android:name=".ChunksActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.SEND" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:mimeType="text/plain" />
+      </intent-filter>
+
+    </activity>
     <activity android:name=".settings.SettingsActivity" />
 
     <activity-alias
