--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <application
     android:name="com.ataulm.chunks.ChunksApplication"
     android:allowBackup="true"
-    android:icon="@drawable/ic_launcher"
+    android:icon="@drawable/ic_logo"
     android:label="@string/app_name"
     android:theme="@style/AppTheme"
     tools:ignore="GoogleAppIndexingWarning">
