--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     compile "com.android.support:design:${supportVersion}"
 
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.novoda:view-pager-adapter:0.9.1'
+    compile 'com.novoda:accessibilitools:1.4.0'
     compile 'com.novoda:landing-strip:1.0.1'
+    compile 'com.novoda:view-pager-adapter:0.9.1'
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
