--- a/mobile/src/debug/AndroidManifest.xml
+++ b/mobile/src/debug/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
 
-        <activity android:name=".ChunkItemViewActivity" />
+        <activity android:name=".ViewActivity" />
 
     </application>
 
