--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
+        maven {
+            url  "http://dl.bintray.com/novoda/maven"
+        }
         jcenter()
     }
 }
