--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url  "http://dl.bintray.com/novoda/maven"
+            url 'http://dl.bintray.com/novoda/maven'
         }
         jcenter()
     }
