--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
+    apt 'com.google.auto.value:auto-value:1.4'
+    provided 'com.google.auto.value:auto-value:1.4'
+
     debugCompile('com.novoda:espresso-support-extras:0.0.3')
     androidTestCompile('com.novoda:espresso-support:0.0.3') {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -64,6 +67,7 @@ dependencies {
     androidTestCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+    androidTestCompile project(path: ':core', configuration: 'coreTestFixtures')
 
     // Android runner and rules support
     androidTestCompile('com.android.support.test:runner:0.5') {
