--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -39,6 +39,10 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    lintOptions {
+        lintConfig file("../lint-config.xml")
+    }
 }
 
 dependencies {
