--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
 allprojects {
     repositories {
+        google()
         maven {
             url 'http://dl.bintray.com/novoda/maven'
         }
