--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,11 +17,11 @@ idea {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson:2.7' // TODO: update to latest
     compile 'com.google.code.findbugs:annotations:3.0.0'
-    compile 'io.reactivex:rxjava:1.1.1'
+    compile 'io.reactivex:rxjava:1.1.1' // TODO: update to latest
 
-    compileOnly 'com.google.auto.value:auto-value:1.4'
+    compileOnly 'com.google.auto.value:auto-value:1.4' // TODO: update to latest
     apt 'com.google.auto.value:auto-value:1.4'
 
     testCompile 'junit:junit:4.12'
