--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
 
     </activity-alias>
 
+    <meta-data
+      android:name="io.fabric.ApiKey"
+      android:value="${fabricApiKey}" />
+
   </application>
 
 </manifest>
