--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
             butterknife    : '8.0.1',
             dexmaker       : '1.2',
             espressoSupport: '0.2.1',
+            room           : '1.0.0-rc1',
             rxJava         : '27.0.0'
     ]
 
@@ -36,6 +37,8 @@ ext {
             jUnit                : 'junit:junit:4.12',
             landingStrip         : 'com.novoda:landing-strip:1.0.1',
             mockitoCore          : 'org.mockito:mockito-core:1.10.19',
+            roomRuntime          : "android.arch.persistence.room:runtime:${versions.room}",
+            roomCompiler         : "android.arch.persistence.room:compiler:${versions.room}",
             rxAndroid            : 'io.reactivex:rxandroid:1.2.1',
             rxJava               : 'io.reactivex:rxjava:1.1.1',
             supportAnnotations   : "com.android.support:support-annotations:${versions.androidSupport}",
