--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -27,7 +27,7 @@ android {
         versionCode 8
         versionName '1.1.2'
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigBoolean 'SHOULD_ENABLE_FABRIC', shouldEnableFabric
         manifestPlaceholders = [
@@ -73,10 +73,10 @@ dependencies {
     compile libraries.rxAndroid
     compile libraries.roomRuntime
     annotationProcessor libraries.roomCompiler
-    compile libraries.supportAppCompatV7
-    compile libraries.supportV13
-    compile libraries.supportRecyclerview
-    compile libraries.supportDesign
+    compile libraries.appcompat
+    compile libraries.legacySupportV13
+    compile libraries.recyclerview
+    compile libraries.androidMaterial
     compile libraries.viewPagerAdapter
 
     debugCompile libraries.espressoSupportExtras
