--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,37 +14,37 @@ ext {
     ]
 
     libraries = [
-            build                : [
+            build                   : [
                     androidGradle  : 'com.android.tools.build:gradle:3.2.1',
                     buildProperties: 'com.novoda:gradle-build-properties-plugin:0.3',
                     fabric         : 'io.fabric.tools:gradle:1.25.4'
             ],
-            accessibilitools     : 'com.novoda:accessibilitools:1.4.1',
-            autoValue            : 'com.google.auto.value:auto-value:1.4',
-            androidTestRunner    : 'androidx.test:runner:1.1.0',
-            androidEspressoCore  : 'androidx.test.espresso:espresso-core:3.1.0',
-            butterknife          : "com.jakewharton:butterknife:${versions.butterknife}",
-            butterknifeCompiler  : "com.jakewharton:butterknife-compiler:${versions.butterknife}",
-            crashlytics          : 'com.crashlytics.sdk.android:crashlytics:2.6.8@aar',
-            dexmaker             : "com.google.dexmaker:dexmaker:${versions.dexmaker}",
-            dexmakerMockito      : "com.google.dexmaker:dexmaker-mockito:${versions.dexmaker}",
-            espressoSupport      : "com.novoda:espresso-support:${versions.espressoSupport}",
-            espressoSupportExtras: "com.novoda:espresso-support-extras:${versions.espressoSupport}",
-            festAssertCore       : 'org.easytesting:fest-assert-core:2.0M10',
-            findbugsAnnotations  : 'com.google.code.findbugs:annotations:3.0.0',
-            gson                 : 'com.google.code.gson:gson:2.7',
-            jUnit                : 'junit:junit:4.12',
-            landingStrip         : 'com.novoda:landing-strip:1.0.1',
-            mockitoCore          : 'org.mockito:mockito-core:1.10.19',
-            roomRuntime          : "androidx.room:room-runtime:${versions.room}",
-            roomCompiler         : "androidx.room:room-compiler:${versions.room}",
-            rxAndroid            : 'io.reactivex:rxandroid:1.2.1',
-            rxJava               : 'io.reactivex:rxjava:1.1.1',
-            supportAnnotations   : "com.android.support:support-annotations:${versions.androidSupport}",
-            appcompat            : "androidx.appcompat:appcompat:1.0.2",
-            androidMaterial      : "com.google.android.material:material:1.1.0-alpha01",
-            recyclerview         : "androidx.recyclerview:recyclerview:1.0.0",
-            legacySupportV13     : "androidx.legacy:legacy-support-v13:1.0.0",
-            viewPagerAdapter     : 'com.novoda:view-pager-adapter:0.9.1',
+            accessibilitools        : 'com.novoda:accessibilitools:1.4.1',
+            autoValue               : 'com.google.auto.value:auto-value:1.4',
+            butterknife             : "com.jakewharton:butterknife:${versions.butterknife}",
+            butterknifeCompiler     : "com.jakewharton:butterknife-compiler:${versions.butterknife}",
+            crashlytics             : 'com.crashlytics.sdk.android:crashlytics:2.6.8@aar',
+            dexmaker                : "com.google.dexmaker:dexmaker:${versions.dexmaker}",
+            dexmakerMockito         : "com.google.dexmaker:dexmaker-mockito:${versions.dexmaker}",
+            espressoSupport         : "com.novoda:espresso-support:${versions.espressoSupport}",
+            espressoSupportExtras   : "com.novoda:espresso-support-extras:${versions.espressoSupport}",
+            festAssertCore          : 'org.easytesting:fest-assert-core:2.0M10',
+            findbugsAnnotations     : 'com.google.code.findbugs:annotations:3.0.0',
+            gson                    : 'com.google.code.gson:gson:2.7',
+            jUnit                   : 'junit:junit:4.12',
+            landingStrip            : 'com.novoda:landing-strip:1.0.1',
+            mockitoCore             : 'org.mockito:mockito-core:1.10.19',
+            androidxAppCompat       : 'androidx.appcompat:appcompat:1.0.2',
+            androidxEspressoCore    : 'androidx.test.espresso:espresso-core:3.1.0',
+            androidxLegacySupportV13: 'androidx.legacy:legacy-support-v13:1.0.0',
+            androidxMaterial        : 'com.google.android.material:material:1.1.0-alpha01',
+            androidxRecyclerView    : 'androidx.recyclerview:recyclerview:1.0.0',
+            androidxRoomRuntime     : "androidx.room:room-runtime:${versions.room}",
+            androidxRoomCompiler    : "androidx.room:room-compiler:${versions.room}",
+            androidxTestExtJunit    : 'androidx.test.ext:junit:1.0.0',
+            androidxTestRules       : 'androidx.test:rules:1.1.0',
+            rxAndroid               : 'io.reactivex:rxandroid:1.2.1',
+            rxJava                  : 'io.reactivex:rxjava:1.1.1',
+            viewPagerAdapter        : 'com.novoda:view-pager-adapter:0.9.1',
     ]
 }
