Add kotlin dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,21 @@ buildscript {
     apply from: 'dependencies.gradle'
     repositories {
         google()
-        jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        jcenter()
     }
     dependencies {
         classpath libraries.build.androidGradle
         classpath libraries.build.buildProperties
         classpath libraries.build.fabric
+        classpath libraries.build.kotlinGradle
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        jcenter()
     }
 }
