--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
 
 /////////////////////////////////////////////////////////////////////////
 // for AutoValue in ASide
@@ -19,6 +20,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile libraries.gson
     compile libraries.findbugsAnnotations
+    compile libraries.kotlinStdLib
     compile libraries.rxJava
 
     compileOnly libraries.autoValue
