--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,15 +9,16 @@ ext {
             butterknife    : '8.0.1',
             dexmaker       : '1.2',
             espressoSupport: '0.2.1',
-            room           : '2.1.0-alpha02',
-            rxJava         : '27.0.0'
+            kotlin         : '1.3.11',
+            room           : '2.1.0-alpha02'
     ]
 
     libraries = [
             build                   : [
                     androidGradle  : 'com.android.tools.build:gradle:3.2.1',
                     buildProperties: 'com.novoda:gradle-build-properties-plugin:0.3',
-                    fabric         : 'io.fabric.tools:gradle:1.25.4'
+                    fabric         : 'io.fabric.tools:gradle:1.25.4',
+                    kotlinGradle   : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
             ],
             accessibilitools        : 'com.novoda:accessibilitools:1.4.1',
             autoValue               : 'com.google.auto.value:auto-value:1.4',
@@ -32,6 +33,7 @@ ext {
             findbugsAnnotations     : 'com.google.code.findbugs:annotations:3.0.0',
             gson                    : 'com.google.code.gson:gson:2.7',
             jUnit                   : 'junit:junit:4.12',
+            kotlinStdLib            : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
             landingStrip            : 'com.novoda:landing-strip:1.0.1',
             mockitoCore             : 'org.mockito:mockito-core:1.10.19',
             androidxAppCompat       : 'androidx.appcompat:appcompat:1.0.2',
