--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     android:allowBackup="true"
     android:icon="@drawable/ic_logo"
     android:label="@string/app_name"
-    android:theme="@style/AppTheme"
+    android:theme="@style/Theme.Chunks"
     tools:ignore="GoogleAppIndexingWarning">
 
     <activity android:name=".ChunksActivity">
