--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,6 @@
-plugins {
-    id 'net.ltgt.apt' version '0.10'
-}
-
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
 /////////////////////////////////////////////////////////////////////////
 // for AutoValue in ASide
@@ -17,33 +14,15 @@ idea {
 /////////////////////////////////////////////////////////////////////////
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile libraries.gson
-    compile libraries.findbugsAnnotations
-    compile libraries.kotlinStdLib
-    compile libraries.rxJava
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation libraries.gson
+    implementation libraries.findbugsAnnotations
+    implementation libraries.kotlinStdLib
+    implementation libraries.rxJava
 
-    compileOnly libraries.autoValue
-    apt libraries.autoValue
-
-    testCompile libraries.jUnit
-    testCompile libraries.mockitoCore
-    testCompile libraries.festAssertCore
+    api libraries.autoValue
+    kapt libraries.autoValue
 }
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-
-task createCoreTestFixturesJar(type: Jar, dependsOn: testClasses) {
-    from sourceSets.test.output.classesDir
-    classifier = 'test'
-    include '**/*Fixtures.class'
-}
-
-configurations {
-    coreTestFixtures.extendsFrom testCompile
-}
-
-artifacts {
-    coreTestFixtures createCoreTestFixturesJar
-}
