--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,17 +5,16 @@ ext {
                     min    : 23,
                     target : 28,
             ],
-            androidSupport : '28.0.0',
             butterknife    : '8.0.1',
             dexmaker       : '1.2',
             espressoSupport: '0.2.1',
-            kotlin         : '1.3.11',
-            room           : '2.1.0-alpha02'
+            kotlin         : '1.3.71',
+            room           : '2.2.0-rc01'
     ]
 
     libraries = [
             build                   : [
-                    androidGradle  : 'com.android.tools.build:gradle:3.2.1',
+                    androidGradle  : 'com.android.tools.build:gradle:4.0.0',
                     buildProperties: 'com.novoda:gradle-build-properties-plugin:0.3',
                     kotlinGradle   : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
             ],
@@ -34,11 +33,11 @@ ext {
             kotlinStdLib            : "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
             landingStrip            : 'com.novoda:landing-strip:1.0.1',
             mockitoCore             : 'org.mockito:mockito-core:1.10.19',
-            androidxAppCompat       : 'androidx.appcompat:appcompat:1.0.2',
+            androidxAppCompat       : 'androidx.appcompat:appcompat:1.2.0-beta01',
             androidxEspressoCore    : 'androidx.test.espresso:espresso-core:3.1.0',
             androidxLegacySupportV13: 'androidx.legacy:legacy-support-v13:1.0.0',
             androidxMaterial        : 'com.google.android.material:material:1.3.0-alpha01',
-            androidxRecyclerView    : 'androidx.recyclerview:recyclerview:1.0.0',
+            androidxRecyclerView    : 'androidx.recyclerview:recyclerview:1.2.0-alpha02',
             androidxRoomRuntime     : "androidx.room:room-runtime:${versions.room}",
             androidxRoomCompiler    : "androidx.room:room-compiler:${versions.room}",
             androidxTestExtJunit    : 'androidx.test.ext:junit:1.0.0',
