--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,21 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.novoda.build-properties'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 buildProperties {
-    fabric {
-        file project.file('../fabric.properties')
-    }
     signing {
         file project.file('../signing.properties')
     }
-}
-
-String MISSING_FABRIC_KEY = 'missing_fabric_key'
-String fabricApiKey = buildProperties.fabric['apiKey'].or(MISSING_FABRIC_KEY).string
-boolean shouldEnableFabric = fabricApiKey != MISSING_FABRIC_KEY
-if (shouldEnableFabric) {
-    apply plugin: 'io.fabric'
 }
 
 android {
@@ -58,32 +49,22 @@ android {
 }
 
 dependencies {
-    compile project(':core')
+    implementation project(':core')
 
-    compile libraries.accessibilitools
-    compile libraries.androidxAppCompat
-    compile libraries.androidxLegacySupportV13
-    compile libraries.androidxMaterial
-    compile libraries.androidxRecyclerView
-    compile libraries.androidxRoomRuntime
-    compile libraries.butterknife
-    compile libraries.kotlinStdLib
-    compile libraries.landingStrip
-    compile libraries.rxAndroid
-    compile libraries.viewPagerAdapter
+    implementation libraries.accessibilitools
+    implementation libraries.androidxAppCompat
+    implementation libraries.androidxLegacySupportV13
+    implementation libraries.androidxMaterial
+    implementation libraries.androidxRecyclerView
+    implementation libraries.androidxRoomRuntime
+    implementation libraries.butterknife
+    implementation libraries.gson
+    implementation libraries.kotlinStdLib
+    implementation libraries.landingStrip
+    implementation libraries.rxAndroid
+    implementation libraries.viewPagerAdapter
 
-    provided libraries.autoValue
-    annotationProcessor libraries.androidxRoomCompiler
-    annotationProcessor libraries.autoValue
-    annotationProcessor libraries.butterknifeCompiler
-
-    androidTestCompile project(path: ':core', configuration: 'coreTestFixtures')
-    androidTestCompile libraries.dexmaker
-    androidTestCompile libraries.dexmakerMockito
-    androidTestCompile libraries.espressoSupport
-    debugCompile libraries.espressoSupportExtras
-    androidTestCompile libraries.mockitoCore
-    androidTestCompile libraries.androidxEspressoCore
-    androidTestCompile libraries.androidxTestExtJunit
-    androidTestCompile libraries.androidxTestRules
+    kapt libraries.androidxRoomCompiler
+    kapt libraries.autoValue
+    kapt libraries.butterknifeCompiler
 }
